--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <header>
   <div class="logo">
-    <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Tuba Tech Dynamics Logo">
+    <a href="{{ '/' | relative_url }}">
+      <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Tuba Tech Dynamics Logo">
+    </a>
   </div>
   <nav>
     <ul>
