--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -117,7 +117,7 @@ form button {
 }
 
 // Add padding to internal pages
-.page-content {
+.page-content, .page-header {
   padding: $common-padding;
 }
 
