--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,5 +15,7 @@
       gtag('js', new Date());
       gtag('config', '{{ site.google_analytics }}');
     </script>
+    <!-- Local JavaScript -->
+    <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
   </body>
 </html>
