--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -256,42 +256,43 @@ form button {
   cursor: pointer;
 }
 
-// Cool headers for internal pages
+// Updated cool headers for internal pages
 .page-header {
   background-color: $header-bg-color;
-  padding: 60px 0;
-  margin-bottom: 40px;
+  padding: 40px 0;
+  margin-bottom: 30px;
   position: relative;
   overflow: hidden;
 
   &::before {
     content: '';
     position: absolute;
-    top: -50%;
-    left: -50%;
-    width: 200%;
-    height: 200%;
-    background: radial-gradient(circle, $satin-sheen-gold 0%, transparent 50%);
+    top: -100%;
+    left: -100%;
+    width: 300%;
+    height: 300%;
+    background: radial-gradient(circle, $satin-sheen-gold 0%, transparent 70%);
     opacity: 0.1;
-    animation: rotate 20s linear infinite;
+    animation: rotate 30s linear infinite;
   }
 
   h1 {
     color: $primary-bg-color;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
     text-transform: uppercase;
     letter-spacing: 2px;
     position: relative;
     z-index: 1;
     text-align: center;
+    margin: 0;
 
     &::after {
       content: '';
       display: block;
-      width: 60px;
-      height: 4px;
+      width: 40px;
+      height: 3px;
       background-color: $cta-color;
-      margin: 20px auto 0;
+      margin: 15px auto 0;
     }
   }
 }
