--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -62,18 +62,9 @@ nav a {
   align-items: center;
   justify-content: center;
   overflow: hidden;
-
-  video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    width: auto;
-    height: 100%;
-    transform: translateX(-50%) translateY(-50%);
-    object-fit: cover;
-    object-position: center;
-  }
+  background-image: url('/assets/images/hero-background.png');
+  background-size: cover;
+  background-position: center;
 
   &::before {
     content: '';
