--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -295,6 +295,7 @@ form button {
 // Updated padding for internal pages
 .page-content {
   padding: 20px 20px;
+  overflow-x: hidden; // Prevent horizontal scrolling
 
   img {
     @extend .full-width-image;
@@ -305,9 +306,12 @@ form button {
 
 // New full-width image styles
 .full-width-image {
-  width: 100vw;
-  margin-left: calc(-50vw + 50%);
+  width: 100%;
+  max-width: 100vw;
+  margin-left: 50%;
+  transform: translateX(-50%);
   height: 56.25vw; // This creates a 16:9 aspect ratio
+  max-height: 80vh; // Limit maximum height
   object-fit: cover;
   object-position: center;
 }
