--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -498,16 +498,47 @@ form {
   padding: 0;
 
   li {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
+    padding-bottom: 40px;
+    border-bottom: 1px solid $accent-color;
+
+    &:last-child {
+      border-bottom: none;
+    }
+  }
+
+  h2 {
+    margin-bottom: 10px;
   }
 }
 
 .post-meta {
   color: #666;
   font-size: 0.9em;
+  margin-bottom: 15px;
 }
 
 .blog-post {
+  padding: 40px 20px;
+
+  h1 {
+    margin-bottom: 20px;
+  }
+
+  .post-meta {
+    margin-bottom: 30px;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+    margin: 20px 0;
+  }
+}
+
+// Blog styles
+.blog-container {
   max-width: 800px;
   margin: 0 auto;
+  padding: 40px 20px;
 }
