--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -206,14 +206,10 @@ nav {
 
 .full-width-image {
   width: 100vw;
-  height: 56.25vw;
-  max-height: 80vh;
-  object-fit: cover;
-  object-position: center;
-  margin-left: calc(-50vw + 50%);
-  margin-right: calc(-50vw + 50%);
-  margin-top: 0;
-  margin-bottom: 0;
+  max-width: 100vw;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  height: auto;
 }
 
 // Page Styles
@@ -493,6 +489,13 @@ form {
   }
 }
 
+// Blog styles
+.blog-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 40px 20px;
+}
+
 .post-list {
   list-style: none;
   padding: 0;
@@ -519,26 +522,71 @@ form {
 }
 
 .blog-post {
-  padding: 40px 20px;
-
-  h1 {
-    margin-bottom: 20px;
-  }
-
-  .post-meta {
-    margin-bottom: 30px;
-  }
-
   img {
-    max-width: 100%;
-    height: auto;
-    margin: 20px 0;
+    @extend .full-width-image;
   }
 }
 
-// Blog styles
-.blog-container {
+// Add this new container class
+.content-container {
   max-width: 800px;
   margin: 0 auto;
   padding: 40px 20px;
+}
+
+// Update the full-width image styles
+.full-width-image {
+  width: 100vw;
+  max-width: 100vw;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  height: auto;
+}
+
+// Update blog styles
+.blog-container {
+  @extend .content-container;
+}
+
+.post-list {
+  list-style: none;
+  padding: 0;
+
+  li {
+    margin-bottom: 40px;
+    padding-bottom: 40px;
+    border-bottom: 1px solid $accent-color;
+
+    &:last-child {
+      border-bottom: none;
+    }
+  }
+
+  h2 {
+    margin-bottom: 10px;
+  }
+}
+
+.post-meta {
+  color: #666;
+  font-size: 0.9em;
+  margin-bottom: 15px;
+}
+
+.blog-post {
+  img {
+    @extend .full-width-image;
+  }
+}
+
+// Update other sections to use the new container
+.introduction, .services-highlights, .featured-solution {
+  @extend .content-container;
+}
+
+.featured-solution {
+  background-color: $eggshell;
+  margin-left: calc(-50vw + 50%);
+  margin-right: calc(-50vw + 50%);
+  padding: 40px calc(50vw - 50% + 20px);
 }
